# Mario-Kart-Builds-Analyzer

./: Body.cpp  Body.h  Build.cpp  Build.h  CMakeLists.txt  CSVLoader.cpp  CSVLoader.h  Component.cpp  Component.h  Driver.cpp  Driver.h  Glider.cpp  Glider.h  MK8Exception.h  QueryEngine.cpp  QueryEngine.h  README.md  Tire.cpp  Tire.h  main  main.cpp  readme.md  resources.qrc  structure.md
data/: Bodies.csv  Drivers.csv  Gliders.csv  Tires.csv
qml/: Theme.qml
qml/components/: ComponentPicker.qml  PrimaryButton.qml  SoundFx.qml
qml/views/: BuildView.qml  CatalogView.qml  HomeView.qml  RankingView.qml
src/: main.cpp
src/core/: Body.cpp  Body.h  Build.cpp  Build.h  CSVLoader.cpp  CSVLoader.h  Component.cpp  Component.h  Driver.cpp  Driver.h  Glider.cpp  Glider.h  MK8Exception.h  QueryEngine.cpp  QueryEngine.h  Tire.cpp  Tire.h
src/models/: BuildListModel.cpp  BuildListModel.h  ComponentListModel.cpp  ComponentListModel.h
src/viewmodels/: AppController.cpp  AppController.h  BuildViewModel.cpp  BuildViewModel.h
